(config): please po gana ka na